compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unreachable_code_in_use_with_fn_literal_rhs_warns_once.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn wibble() {\n  Nil\n}\n\npub fn main() {\n  use <- fn(f) { f() }\n  panic\n  wibble()\n}\n"
---
----- SOURCE CODE

pub fn wibble() {
  Nil
}

pub fn main() {
  use <- fn(f) { f() }
  panic
  wibble()
}


----- WARNING
warning: Immediately called anonymous function
  ┌─ /src/warning/wrn.gleam:7:3
  │  
7 │ ╭   use <- fn(f) { f() }
8 │ │   panic
9 │ │   wibble()
  │ ╰──────────^ This anonymous function is immediately called

This anonymous function is immediately called. It can be replaced with a
block expression.

Hint: Use a block expression with `let` bindings instead, for example: `{
let a = 1; let b = 2; a + b }`

warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:9:3
  │
9 │   wibble()
  │   ^^^^^^^^

This code is unreachable because it comes after a `panic`.
