compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unreachable_function_after_panic.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub fn wibble(_) { 1 }\n        pub fn main() {\n            panic\n            wibble(10)\n        }\n        "
---
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:5:13
  │
5 │             wibble(10)
  │             ^^^^^^^^^^

This code is unreachable because it comes after a `panic`.
