compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unreachable_use_fn_statement_after_panic.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() -> Nil {\n  panic\n  use <- fn(_) { Nil }\n  1\n}\n"
---
----- SOURCE CODE

pub fn main() -> Nil {
  panic
  use <- fn(_) { Nil }
  1
}


----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:4:3
  │  
4 │ ╭   use <- fn(_) { Nil }
5 │ │   1
  │ ╰───^

This code is unreachable because it comes after a `panic`.

warning: Immediately called anonymous function
  ┌─ /src/warning/wrn.gleam:4:3
  │  
4 │ ╭   use <- fn(_) { Nil }
5 │ │   1
  │ ╰───^ This anonymous function is immediately called

This anonymous function is immediately called. It can be replaced with a
block expression.

Hint: Use a block expression with `let` bindings instead, for example: `{
let a = 1; let b = 2; a + b }`
